# sample_simple_websockets_chat_app

./: Cargo.toml  README.md
.cargo/: config.toml
aws_common/: Cargo.toml
aws_common/src/: lambda.rs
ws_onconnect/: Cargo.toml
ws_onconnect/src/: main.rs  models.rs
ws_ondisconnect/: Cargo.toml
ws_ondisconnect/src/: main.rs
ws_sendmessage/: Cargo.toml
ws_sendmessage/src/: adapters.rs  controller.rs  main.rs
ws_sendmessage/src/adapters/: api_gateway_messenger.rs  dynamodb_user_repository.rs
ws_sendmessage/src/models/: messenger.rs  user.rs
