[package]
name = "ws_ondisconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
aws-sdk-dynamodb = "0.26.0"
aws-config = "0.55.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws_common = { path = "../aws_common" }
