[package]
name = "ws_sendmessage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.12"
anyhow = "1.0"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
http = "0.2.9"
http-serde = "1.1.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
async-openai = "0.10.3"
aws-config = "0.55.1"
aws-sdk-apigatewaymanagement = "0.26.0"
async-trait = "0.1.68"
aws-sdk-dynamodb = "0.26.0"
aws_common = { path = "../aws_common" }
